[project]
name = "rua_company"
authors = [
    { name = "Yamen Zakhour", email = "yz.kh@icloud.com"}
]
description = "Rua Company Management System"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "pypdf",
    "Pillow>=11.0.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[deploy.dependencies.apt]
packages = [
    "google-chrome-stable",
]
