[project]
name = "rua_company"
authors = [
    { name = "Yamen Zakhour", email = "yz.kh@icloud.com"}
]
description = "Rua Company Management System"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "pypdf",
    "Pillow>=11.0.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[deploy.dependencies.apt]
packages = [
    "wget",
    "gnupg2",
    "apt-transport-https",
    "ca-certificates"
]

[deploy.dependencies.before_install]
commands = [
    "wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add -",
    "sh -c 'echo \"deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main\" > /etc/apt/sources.list.d/google.list'",
    "apt-get update",
    "apt-get install -y google-chrome-stable"
]
